Change book images by year main page to css buttons

--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -3,13 +3,13 @@
 <head>
     <style>
         a:link {
-            color: lightslategrey;
+            color: white;
             background-color: transparent;
             text-decoration: none;
         }
 
         a:visited {
-            color: darkslateblue;
+            color: white;
             background-color: transparent;
             text-decoration: none;
         }
@@ -25,25 +25,52 @@
             background-color: transparent;
             text-decoration: underline;
         }
-
     </style>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Book Reports</title>
+    <title>Landing Page</title>
 </head>
 <body>
-<div class="content">
-    <BR>
-    <a href="2021_book_images.html">2021 Book Images</a><BR>
-    <a href="2020_book_images.html">2020 Book Images</a><BR>
-    <a href="2019_book_images.html">2019 Book Images</a><BR>
-    <a href="2018_book_images.html">2018 Book Images</a><BR>
-    <a href="2017_book_images.html">2017 Book Images</a><BR>
-    <a href="2016_book_images.html">2016 Book Images</a><BR>
-    <a href="2015_book_images.html">2015 Book Images</a><BR>
-    <a href="2014_book_images.html">2014 Book Images</a><BR>
-    <a href="2013_book_images.html">2013 Book Images</a><BR>
-    <BR>
+
+<div class="title">Book Images by Year</div>
+<div id="container1">
+    <div class="button" id="button-9">
+        <div id="slide9"></div>
+        <a href="2021_book_images.html">2021</a>
+    </div>
+    <div class="button" id="button-8">
+        <div id="slide8"></div>
+        <a href="2020_book_images.html">2020</a>
+    </div>
+    <div class="button" id="button-7">
+        <div id="slide7"></div>
+        <a href="2019_book_images.html">2019</a>
+    </div>
+    <div class="button" id="button-6">
+        <div id="slide6"></div>
+        <a href="2019_book_images.html">2018</a>
+    </div>
+    <div class="button" id="button-5">
+        <div id="slide5"></div>
+        <a href="2017_book_images.html">2017</a>
+    </div>
+    <div class="button" id="button-4">
+        <div id="slide4"></div>
+        <a href="2016_book_images.html">2016</a>
+    </div>
+    <div class="button" id="button-3">
+        <div id="slide3"></div>
+        <a href="2015_book_images.html">2015</a>
+    </div>
+    <div class="button" id="button-2">
+        <div id="slide2"></div>
+        <a href="2014_book_images.html">2014</a>
+    </div>
+    <div class="button" id="button-1">
+        <div id="slide1"></div>
+        <a href="2013_book_images.html">2013</a>
+    </div>
 </div>
+
 </body>
 </html>
