book and media report content update Mon 10/11/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -74,6 +74,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1560055091l/43212425._SX318_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1617709587l/55339408.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1606112889l/55997402.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1578523237l/26228034._SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
