--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 10/10/2021 06:00<br>
+Completed books sorted by folder - 10/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 67 books - 631H 20M / 26D 7H 20M<br>
+Completed in 2021 : 68 books - 644H 43M / 26D 20H 43M<br>
 Total Comic Trades : 27<br>
-Average book length : 9H 25M<br>
-Hours read per week : 15H 36M<br>
-On pace to complete 86 books (814H 48M / 33D 22H 48M) by the end of 2021<br>
+Average book length : 9H 28M<br>
+Hours read per week : 15H 53M<br>
+On pace to complete 87 books (829H 7M / 34D 13H 7M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -30,6 +30,7 @@ Batman Fortnite Zero Point - 4H 43M<br>
 Batman White Knight - 7H 13M<br>
 Bizarro - 4H 28M<br>
 Bobiverse 4 - Heaven's River - Dennis E. Taylor - 16H 57M<br>
+Broken Earth 2 - The Obelisk Gate - N. K. Jemisin - 13H 23M<br>
 Capital and Ideology - Thomas Piketty - 49H 10M<br>
 Cosmic Ghost Rider vol 1 - 3H 29M<br>
 Culture 03 - Use of Weapons - Iain M. Banks - 13H 33M<br>
@@ -470,9 +471,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1720H 53M / 71D 16H 53M<br>
+Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 67 books - 631H 20M / 26D 7H 20M<br>
+Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -485,28 +486,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 498 books - 6635H 55M / 276D 11H 55M<br>
+Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2204H 41M / 91D 20H 41M<br>
+169 queued items: 2217H 50M / 92D 9H 50M<br>
 0 reserve titles are marked as high priority<br>
-20.51% of reserve items are queued<br>
+20.53% of reserve items are queued<br>
  <br>
 All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 400 titles - 4409H 8M / 183D 17H 8M<br>
-Total remaining in queue and reserve: 824 titles - 10127H 9M / 421D 23H 9M<br>
-Average completed per year: 45.6 titles - 502H 38M / 20D 22H 38M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
+Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
+Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.677 (1.677 seconds)<br>
-Total time including file writes: 00:00:01.677 (1.677 seconds)
+Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
+Total time including file writes: 00:00:01.705 (1.705 seconds)
 </div>
 </body>
 </html>
