--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 10/10/2021 06:00<br>
+Reserved books sorted by name - 10/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-824 books<br>
+823 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -115,7 +115,6 @@ Boneshaker - Cherie Priest - 13H 46M (Book Reserve - Audiobooks)<br>
 Book of the New Sun 4 - The Citadel of the Autarch - 10H 28M (Book Reserve - Audiobooks)<br>
 Book of the New Sun 5 - The Urth of the New Sun - 11H 47M (Book Reserve - Audiobooks)<br>
 Breakfast of Champions - Kurt Vonnegut - 5H 27M (Book Reserve - Audiobooks)<br>
-Broken Earth 2 - The Obelisk Gate - N. K. Jemisin - 13H 23M (Queue - Current Audiobooks)<br>
 Broken Earth 3 - The Stone Sky - N. K. Jemisin - 14H 20M (Book Reserve - Audiobooks)<br>
 Buyology -Martin Lindstrom - 7H 23M (Book Reserve - Audiobooks)<br>
 CATCH-22 - Joseph Heller - 20H 3M (Book Reserve - Audiobooks)<br>
@@ -230,7 +229,7 @@ Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Curren
 Fantastic Four vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 Fascism A Warning - Madeleine Albright - 9H 56M (Book Reserve - Audiobooks)<br>
 Fear - Bob Woodward - 12H 23M (Book Reserve - Audiobooks)<br>
-Fire & Blood - George R. R. Martin - 26H 31M (Book Reserve - Audiobooks)<br>
+Fire & Blood - George R. R. Martin - 26H 31M (Queue - Current Audiobooks)<br>
 Fire and Fury - Inside the Trump White House - Michael Wolff - 11H 59M (Book Reserve - Audiobooks)<br>
 First Law 6 - Red Country - 19H 58M (Queue - Current Audiobooks)<br>
 Fleet School 1 - Children of the Fleet - Orson Scott Card - 11H 40M (Book Reserve - Audiobooks)<br>
@@ -841,9 +840,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1720H 53M / 71D 16H 53M<br>
+Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 67 books - 631H 20M / 26D 7H 20M<br>
+Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -856,28 +855,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 498 books - 6635H 55M / 276D 11H 55M<br>
+Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2204H 41M / 91D 20H 41M<br>
+169 queued items: 2217H 50M / 92D 9H 50M<br>
 0 reserve titles are marked as high priority<br>
-20.51% of reserve items are queued<br>
+20.53% of reserve items are queued<br>
  <br>
 All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 400 titles - 4409H 8M / 183D 17H 8M<br>
-Total remaining in queue and reserve: 824 titles - 10127H 9M / 421D 23H 9M<br>
-Average completed per year: 45.6 titles - 502H 38M / 20D 22H 38M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
+Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
+Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.677 (1.677 seconds)<br>
-Total time including file writes: 00:00:01.677 (1.677 seconds)
+Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
+Total time including file writes: 00:00:01.705 (1.705 seconds)
 </div>
 </body>
 </html>
