--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 10/10/2021 06:00<br>
+Completed books sorted by name - 10/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-400 books<br>
+401 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -66,6 +66,7 @@ Book of the New Sun 1 - The Shadow of the Torturer - 9H 22M (Completed in 2015)<
 Brave New World - Aldous Huxley - 8H 1M (Completed in 2013)<br>
 Brief Answers to the Big Questions - Stephen Hawking - 4H 53M (Completed in 2018)<br>
 Broken Earth 1 - The Fifth Season - N. K. Jemisin - 15H 31M (Completed in 2019)<br>
+Broken Earth 2 - The Obelisk Gate - N. K. Jemisin - 13H 23M (Completed in 2021)<br>
 Capital and Ideology - Thomas Piketty - 49H 10M (Completed in 2021)<br>
 Capital in the Twenty-First Century - Thomas Piketty - 24H 58M (Completed in 2019)<br>
 Captain Marvel Volume 2 Stay Fly - 3H 44M (Completed in 2020)<br>
@@ -417,9 +418,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1720H 53M / 71D 16H 53M<br>
+Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 67 books - 631H 20M / 26D 7H 20M<br>
+Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -432,28 +433,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 498 books - 6635H 55M / 276D 11H 55M<br>
+Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2204H 41M / 91D 20H 41M<br>
+169 queued items: 2217H 50M / 92D 9H 50M<br>
 0 reserve titles are marked as high priority<br>
-20.51% of reserve items are queued<br>
+20.53% of reserve items are queued<br>
  <br>
 All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 400 titles - 4409H 8M / 183D 17H 8M<br>
-Total remaining in queue and reserve: 824 titles - 10127H 9M / 421D 23H 9M<br>
-Average completed per year: 45.6 titles - 502H 38M / 20D 22H 38M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
+Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
+Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.677 (1.677 seconds)<br>
-Total time including file writes: 00:00:01.677 (1.677 seconds)
+Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
+Total time including file writes: 00:00:01.705 (1.705 seconds)
 </div>
 </body>
 </html>
