--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 10/10/2021 06:00<br>
+Reserved books sorted by length - 10/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-824 books<br>
+823 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -464,7 +464,6 @@ The Jungle - Upton Sinclair - 13H 21M (Book Reserve - Audiobooks)<br>
 A Confederacy of Dunces - John Kennedy Toole - 13H 21M (Book Reserve - Audiobooks)<br>
 Handmaid's Tale 2 - The Testaments - Margaret Atwood - 13H 21M (Book Reserve - Audiobooks)<br>
 Trejo - Danny Trejo - 13H 22M (Book Reserve - Audiobooks)<br>
-Broken Earth 2 - The Obelisk Gate - N. K. Jemisin - 13H 23M (Queue - Current Audiobooks)<br>
 Thrawn 2 - Thrawn Alliances - Timothy Zahn - 13H 25M (Book Reserve - Audiobooks)<br>
 From a Buick 8 - Stephen King - 13H 28M (Book Reserve - Audiobooks)<br>
 Hainish Cycle 1 - The Dispossessed - Ursula K. Le Guin - 13H 29M (Book Reserve - Audiobooks)<br>
@@ -696,7 +695,7 @@ The Wheel of Time 10 - Crossroads of Twilight - 26H 11M (Book Reserve - Audioboo
 The Wind-Up Bird Chronicle - Haruki Murakami - 26H 19M (Book Reserve - Audiobooks)<br>
 Hand of Thrawn Duology 2 - Vision of the Future - 26H 23M (Book Reserve - Audiobooks)<br>
 American Carnage - Tim Alberta - 26H 30M (Book Reserve - Audiobooks)<br>
-Fire & Blood - George R. R. Martin - 26H 31M (Book Reserve - Audiobooks)<br>
+Fire & Blood - George R. R. Martin - 26H 31M (Queue - Current Audiobooks)<br>
 Behave - The Biology of Humans at Our Best and Worst - Robert M. Sapolsky - 26H 34M (Queue - Current Audiobooks)<br>
 The Wheel of Time 02 - The Great Hunt - 26H 35M (Book Reserve - Audiobooks)<br>
 Mars trilogy 2 - Green Mars - Kim Stanley Robinson - 26H 41M (Book Reserve - Audiobooks)<br>
@@ -749,9 +748,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1720H 53M / 71D 16H 53M<br>
+Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 67 books - 631H 20M / 26D 7H 20M<br>
+Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -764,28 +763,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 498 books - 6635H 55M / 276D 11H 55M<br>
+Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2204H 41M / 91D 20H 41M<br>
+169 queued items: 2217H 50M / 92D 9H 50M<br>
 0 reserve titles are marked as high priority<br>
-20.51% of reserve items are queued<br>
+20.53% of reserve items are queued<br>
  <br>
 All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 400 titles - 4409H 8M / 183D 17H 8M<br>
-Total remaining in queue and reserve: 824 titles - 10127H 9M / 421D 23H 9M<br>
-Average completed per year: 45.6 titles - 502H 38M / 20D 22H 38M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
+Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
+Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.677 (1.677 seconds)<br>
-Total time including file writes: 00:00:01.677 (1.677 seconds)
+Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
+Total time including file writes: 00:00:01.705 (1.705 seconds)
 </div>
 </body>
 </html>
