book and media report content update Tue 10/12/2021

--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 10/11/2021 06:00<br>
+Completed books sorted by name - 10/12/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-401 books<br>
+403 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -136,6 +136,7 @@ Dune 1 - Dune - Frank Herbert - 22H 8M (Completed in 2018)<br>
 Dune 2 - Dune Messiah - Frank Herbert - 9H 0M (Completed in 2018)<br>
 Dune 3 - Children of Dune - Frank Herbert - 16H 56M (Completed in 2019)<br>
 Dune 4 - God Emperor of Dune  - Frank Herbert - 15H 52M (Completed in 2021)<br>
+Edge of Venomverse - 3H 29M (Completed in 2021)<br>
 Elantris 1 - Elantris - Brandon Sanderson - 28H 37M (Completed in 2020)<br>
 Emergency Skin - N. K. Jemisin - 1H 4M (Completed in 2020)<br>
 Ender 01 - Ender's Game - 11H 22M (Completed in 2013)<br>
@@ -230,6 +231,7 @@ Lord of Light - Roger Zelazny - 11H 15M (Completed in 2013)<br>
 Lord of the Rings 1 - The Fellowship Of The Ring - J.R.R. Tolkien - 19H 12M (Completed in 2019)<br>
 Lord of the Rings 2 - The Two Towers - J.R.R. Tolkien - 16H 37M (Completed in 2020)<br>
 Lord of the Rings 3 - The Return Of The King - J.R.R. Tolkien - 15H 21M (Completed in 2020)<br>
+Loser - Jerry Spinelli - 6H 47M (Completed in 2021)<br>
 Love Is Not Enough - Mark Manson - 7H 33M (Completed in 2020)<br>
 M is for Magic - Neil Gaiman - 5H 30M (Completed in 2017)<br>
 Machineries of Empire 1 - Ninefox Gambit - Yoon Ha Lee - 7H 35M (Completed in 2019)<br>
@@ -418,9 +420,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
+Queue - Current Audiobooks - 139 books - 1742H 22M / 72D 14H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
+Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -431,7 +433,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
+Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
@@ -439,22 +441,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2217H 50M / 92D 9H 50M<br>
+170 queued items: 2226H 10M / 92D 18H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.53% of reserve items are queued<br>
+20.66% of reserve items are queued<br>
  <br>
-All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
-Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
-Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
+Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
+Average completed per year: 45.9 titles - 505H 0M / 21D 1H 0M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
-Total time including file writes: 00:00:01.705 (1.705 seconds)
+Total time to process all reports: 00:00:01.821 (1.821 seconds)<br>
+Total time including file writes: 00:00:01.821 (1.821 seconds)
 </div>
 </body>
 </html>
