--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 10/11/2021 06:00<br>
+Reserved books sorted by length - 10/12/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 823 books<br>
@@ -221,6 +221,7 @@ The Witness for the Dead - Katherine Addison - 8H 14M (Book Reserve - Audiobooks
 The End of Eternity - Isaac Asimov - 8H 14M (Book Reserve - Audiobooks)<br>
 When to Rob a Bank - Steven D. Levitt - 8H 16M (Queue - Current Audiobooks)<br>
 How to Raise Kids Who Aren't Assholes - Melinda Wenner Moyer - 8H 19M (Queue - Current Audiobooks)<br>
+A Hunter-Gatherer's Guide to the 21st Century - Heather Heying - 8H 19M (Queue - Current Audiobooks)<br>
 No-Drama Discipline - Daniel J. Siegel - 8H 21M (Queue - Current Audiobooks)<br>
 The Pleasure of Finding Things Out - Richard P. Feynman - 8H 23M (Queue - Audible Audiobooks)<br>
 Skin in the Game - Nassim Nicholas Taleb - 8H 23M (Queue - Current Audiobooks)<br>
@@ -748,9 +749,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
+Queue - Current Audiobooks - 139 books - 1742H 22M / 72D 14H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
+Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -761,7 +762,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
+Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
@@ -769,22 +770,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2217H 50M / 92D 9H 50M<br>
+170 queued items: 2226H 10M / 92D 18H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.53% of reserve items are queued<br>
+20.66% of reserve items are queued<br>
  <br>
-All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
-Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
-Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
+Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
+Average completed per year: 45.9 titles - 505H 0M / 21D 1H 0M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
-Total time including file writes: 00:00:01.705 (1.705 seconds)
+Total time to process all reports: 00:00:01.821 (1.821 seconds)<br>
+Total time including file writes: 00:00:01.821 (1.821 seconds)
 </div>
 </body>
 </html>
