--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -75,6 +75,8 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1617709587l/55339408.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1606112889l/55997402.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1578523237l/26228034._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347404110l/87220.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1518820300l/34668831._SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
