--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 10/11/2021 06:00<br>
+All books sorted by name - 10/12/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1224 books<br>
+1226 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -33,6 +33,7 @@ A Clockwork Orange - Anthony Burgess - 7H 30M (Completed in 2019)<br>
 A Confederacy of Dunces - John Kennedy Toole - 13H 21M (Book Reserve - Audiobooks)<br>
 A Connecticut Yankee in King Arthur's Court - Mark Twain - 12H 50M (Book Reserve - Audiobooks)<br>
 A Farewell to Arms - Ernest Hemingway - 8H 37M (Book Reserve - Audiobooks)<br>
+A Hunter-Gatherer's Guide to the 21st Century - Heather Heying - 8H 19M (Queue - Current Audiobooks)<br>
 A Knight of the Seven Kingdoms - George R. R. Martin - 10H 3M (Completed in 2015)<br>
 A Life on Our Planet - David Attenborough - 6H 22M (Queue - Current Audiobooks)<br>
 A Natural History of Dragons - Marie Brennan - 10H 19M (Book Reserve - Audiobooks)<br>
@@ -335,7 +336,7 @@ Earthseed 2 - Parable of the Talents - Octavia E. Butler - 15H 32M (Book Reserve
 East of Eden - John Steinbeck - 25H 35M (Book Reserve - Audiobooks)<br>
 Economic Dignity - Gene Sperling - 12H 53M (Book Reserve - Audiobooks)<br>
 Edge of Spider-geddon - 3H 44M (Book Reserve - Comic Trades)<br>
-Edge of Venomverse - 3H 29M (Book Reserve - Comic Trades)<br>
+Edge of Venomverse - 3H 29M (Completed in 2021)<br>
 Educated - Tara Westover - 12H 13M (Book Reserve - Audiobooks)<br>
 Effortless - Greg McKeown - 6H 4M (Book Reserve - Audiobooks)<br>
 Eifelheim - Michael Flynn - 17H 17M (Book Reserve - Audiobooks)<br>
@@ -577,6 +578,7 @@ Lord of Light - Roger Zelazny - 11H 15M (Completed in 2013)<br>
 Lord of the Rings 1 - The Fellowship Of The Ring - J.R.R. Tolkien - 19H 12M (Completed in 2019)<br>
 Lord of the Rings 2 - The Two Towers - J.R.R. Tolkien - 16H 37M (Completed in 2020)<br>
 Lord of the Rings 3 - The Return Of The King - J.R.R. Tolkien - 15H 21M (Completed in 2020)<br>
+Loser - Jerry Spinelli - 6H 47M (Completed in 2021)<br>
 Lost Boys - Orson Scott Card - 16H 8M (Book Reserve - Audiobooks)<br>
 Love Is Not Enough - Mark Manson - 7H 33M (Completed in 2020)<br>
 Lovecraft's Monsters - Neil Gaiman - 15H 12M (Queue - Audible Audiobooks)<br>
@@ -1241,9 +1243,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
+Queue - Current Audiobooks - 139 books - 1742H 22M / 72D 14H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
+Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -1254,7 +1256,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
+Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
@@ -1262,22 +1264,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2217H 50M / 92D 9H 50M<br>
+170 queued items: 2226H 10M / 92D 18H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.53% of reserve items are queued<br>
+20.66% of reserve items are queued<br>
  <br>
-All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
-Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
-Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
+Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
+Average completed per year: 45.9 titles - 505H 0M / 21D 1H 0M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
-Total time including file writes: 00:00:01.705 (1.705 seconds)
+Total time to process all reports: 00:00:01.821 (1.821 seconds)<br>
+Total time including file writes: 00:00:01.821 (1.821 seconds)
 </div>
 </body>
 </html>
