--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 10/11/2021 06:00<br>
+Completed books sorted by folder - 10/12/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 68 books - 644H 43M / 26D 20H 43M<br>
-Total Comic Trades : 27<br>
-Average book length : 9H 28M<br>
-Hours read per week : 15H 53M<br>
-On pace to complete 87 books (829H 7M / 34D 13H 7M) by the end of 2021<br>
+Completed in 2021 : 70 books - 654H 59M / 27D 6H 59M<br>
+Total Comic Trades : 28<br>
+Average book length : 9H 21M<br>
+Hours read per week : 16H 5M<br>
+On pace to complete 89 books (839H 21M / 34D 23H 21M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -44,6 +44,7 @@ Discworld 21 - Jingo - 10H 44M<br>
 Doomsday Clock 1 - 6H 58M<br>
 Doomsday Clock 2 - 7H 13M<br>
 Dune 4 - God Emperor of Dune  - Frank Herbert - 15H 52M<br>
+Edge of Venomverse - 3H 29M<br>
 Expanse 6 - Babylon's Ashes - James S. A. Corey - 20H 4M<br>
 Expanse 7 - Persepolis Rising - James S. A. Corey - 20H 34M<br>
 Expanse 8 - Tiamat's Wrath - James S. A. Corey - 19H 8M<br>
@@ -55,6 +56,7 @@ House Of M Ultimate Edition - 6H 28M<br>
 How to Stop Losing Your Sht with Your Kids - Carla Naumburg - 5H 58M<br>
 HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M<br>
 King in Black - 4H 28M<br>
+Loser - Jerry Spinelli - 6H 47M<br>
 Marvel Comics 1000 - 4H 28M<br>
 Moon Knight Legacy vol 2 - 3H 29M<br>
 Noise - Daniel Kahneman - 13H 32M<br>
@@ -471,9 +473,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
+Queue - Current Audiobooks - 139 books - 1742H 22M / 72D 14H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
+Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -484,7 +486,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
+Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
@@ -492,22 +494,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2217H 50M / 92D 9H 50M<br>
+170 queued items: 2226H 10M / 92D 18H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.53% of reserve items are queued<br>
+20.66% of reserve items are queued<br>
  <br>
-All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
-Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
-Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
+Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
+Average completed per year: 45.9 titles - 505H 0M / 21D 1H 0M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
-Total time including file writes: 00:00:01.705 (1.705 seconds)
+Total time to process all reports: 00:00:01.821 (1.821 seconds)<br>
+Total time including file writes: 00:00:01.821 (1.821 seconds)
 </div>
 </body>
 </html>
