--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 10/11/2021 06:00<br>
+Reserved books sorted by folder - 10/12/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 138 books - 1734H 2M / 72D 6H 2M<br>
+Queue - Current Audiobooks : 139 books - 1742H 22M / 72D 14H 22M<br>
  <br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
 13 Things Mentally Strong People Don't Do - Amy Morin - 6H 37M<br>
+A Hunter-Gatherer's Guide to the 21st Century - Heather Heying - 8H 19M<br>
 A Life on Our Planet - David Attenborough - 6H 22M<br>
 Aftermath Trilogy 3 - Empire's End - Chuck Wendig - 15H 55M<br>
 Age of Madness 2 - The Trouble With Peace - Joe Abercrombie - 22H 3M<br>
@@ -212,8 +213,8 @@ Total Comic Trades : 1<br>
 Attack on Titan 34 - 7H 58M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 117 books - 731H 14M / 30D 11H 14M<br>
-Total Comic Trades : 117<br>
+Book Reserve - Comic Trades : 116 books - 727H 45M / 30D 7H 45M<br>
+Total Comic Trades : 116<br>
  <br>
 Absolute Carnage - 6H 13M<br>
 Action Comics 1000 - 4H 58M<br>
@@ -258,7 +259,6 @@ Despicable Deadpool vol 2 - 3H 29M<br>
 Despicable Deadpool vol 3 - 3H 29M<br>
 Detective Comics 1000 - 5H 28M<br>
 Edge of Spider-geddon - 3H 44M<br>
-Edge of Venomverse - 3H 29M<br>
 Fantastic Four vol 1 - 4H 28M<br>
 Future State Wonder Woman - 6H 13M<br>
 Green Lanterns vol 2 - 6H 28M<br>
@@ -866,9 +866,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1734H 2M / 72D 6H 2M<br>
+Queue - Current Audiobooks - 139 books - 1742H 22M / 72D 14H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 68 books - 644H 43M / 26D 20H 43M<br>
+Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -879,7 +879,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
+Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
  <br>
@@ -887,22 +887,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2217H 50M / 92D 9H 50M<br>
+170 queued items: 2226H 10M / 92D 18H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.53% of reserve items are queued<br>
+20.66% of reserve items are queued<br>
  <br>
-All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 401 titles - 4422H 31M / 184D 6H 31M<br>
-Total remaining in queue and reserve: 823 titles - 10113H 46M / 421D 9H 46M<br>
-Average completed per year: 45.7 titles - 504H 0M / 21D 0H 0M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
+Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
+Average completed per year: 45.9 titles - 505H 0M / 21D 1H 0M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.705 (1.705 seconds)<br>
-Total time including file writes: 00:00:01.705 (1.705 seconds)
+Total time to process all reports: 00:00:01.821 (1.821 seconds)<br>
+Total time including file writes: 00:00:01.821 (1.821 seconds)
 </div>
 </body>
 </html>
