book and media report content update Wed 10/13/2021

--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -28,7 +28,7 @@
     </style>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <title>Book Images by Year</title>
 </head>
 <body>
 
