--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 10/12/2021 06:00<br>
+Reserved books sorted by name - 10/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 823 books<br>
@@ -116,7 +116,7 @@ Boneshaker - Cherie Priest - 13H 46M (Book Reserve - Audiobooks)<br>
 Book of the New Sun 4 - The Citadel of the Autarch - 10H 28M (Book Reserve - Audiobooks)<br>
 Book of the New Sun 5 - The Urth of the New Sun - 11H 47M (Book Reserve - Audiobooks)<br>
 Breakfast of Champions - Kurt Vonnegut - 5H 27M (Book Reserve - Audiobooks)<br>
-Broken Earth 3 - The Stone Sky - N. K. Jemisin - 14H 20M (Book Reserve - Audiobooks)<br>
+Broken Earth 3 - The Stone Sky - N. K. Jemisin - 14H 20M (Queue - Current Audiobooks)<br>
 Buyology -Martin Lindstrom - 7H 23M (Book Reserve - Audiobooks)<br>
 CATCH-22 - Joseph Heller - 20H 3M (Book Reserve - Audiobooks)<br>
 Call Sign Chaos - Jim Mattis - 12H 4M (Book Reserve - Audiobooks)<br>
@@ -840,7 +840,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 139 books - 1742H 22M / 72D 14H 22M<br>
+Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -855,28 +855,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 497 books - 6609H 24M / 275D 9H 24M<br>
+Book Reserve - Audiobooks - 496 books - 6595H 3M / 274D 19H 3M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-170 queued items: 2226H 10M / 92D 18H 10M<br>
+171 queued items: 2240H 30M / 93D 8H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.66% of reserve items are queued<br>
+20.78% of reserve items are queued<br>
  <br>
 All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
-Records not found in the lookup file: 2<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
 Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
-Average completed per year: 45.9 titles - 505H 0M / 21D 1H 0M<br>
+Average completed per year: 45.9 titles - 504H 51M / 21D 0H 51M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.821 (1.821 seconds)<br>
-Total time including file writes: 00:00:01.821 (1.821 seconds)
+Total time to process all reports: 00:00:01.607 (1.607 seconds)<br>
+Total time including file writes: 00:00:01.607 (1.607 seconds)
 </div>
 </body>
 </html>
